Add vm configuration options comment Add global Javafx library